--- a/src/constants/color.css
+++ b/src/constants/color.css
@@ -31,11 +31,11 @@
     --clr-search-field-placeholder: var(--clr-text);
     --clr-search-icon: var(--clr-on-dark);
     --clr-search-icon-active: var(--clr-disabled);
-    --clr-search-suggestion-bg: var(--clr-neutral-light);
-    --clr-search-suggestion-bg-active: var(--clr-neutral-light);
-    --clr-search-suggestion-border: var(--clr-panel-border);
-    --clr-search-suggestion-text: var(--clr-text);
-    --clr-search-suggestion-text-active: var(--clr-primary);
+    --clr-search-suggestion-bg: var(--clr-search-field-bg-active);
+    --clr-search-suggestion-bg-active: var(--clr-search-field-bg-active);
+    --clr-search-suggestion-border: var(--clr-text-alpha-2);
+    --clr-search-suggestion-text: var(--clr-search-field-placeholder);
+    --clr-search-suggestion-text-active: var(--clr-search-field-text);
 
     --clr-disabled: #757575;
     --clr-text: #777;
@@ -76,11 +76,11 @@
     --clr-search-field-placeholder: var(--clr-sky-4);
     --clr-search-icon: var(--clr-sky-4);
     --clr-search-icon-active: var(--clr-sky-4);
-    --clr-search-suggestion-bg: var(--clr-neutral-light);
-    --clr-search-suggestion-bg-active: var(--clr-neutral-light);
-    --clr-search-suggestion-border: var(--clr-panel-border);
-    --clr-search-suggestion-text: var(--clr-text);
-    --clr-search-suggestion-text-active: var(--clr-primary);
+    --clr-search-suggestion-bg: var(--clr-search-field-bg-active);
+    --clr-search-suggestion-bg-active: var(--clr-search-field-bg-active);
+    --clr-search-suggestion-border: var(--clr-text-alpha-2);
+    --clr-search-suggestion-text: var(--clr-search-field-placeholder);
+    --clr-search-suggestion-text-active: var(--clr-search-field-text);
 
     --clr-disabled: hsl(0, 0%, 58%);
     --clr-text: hsl(218, 21%, 86%);
